# ActDeck

./: ActDeck.kdev4  CMakeLists.txt  README.md  create_card.html
.kdev4/: ActDeck.kdev4
data/: 1.json  cards_schema.json
src/: cards.cpp  cards.h  constants.h  entity.cpp  entity.h  main.cpp
src/io/: file.cpp  file.h
src/system/: constants.h
src/visual/: cards.cpp  cards.h
